--- a/index.html
+++ b/index.html
@@ -29,10 +29,51 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="time-block row">
+        <div class="hour col-2">9:00am</div>
+        <textarea id="9" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">10:00am</div>
+        <textarea id="10" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">11:00am</div>
+        <textarea id="11" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">12:00pm</div>
+        <textarea id="12" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">1:00pm</div>
+        <textarea id="13" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">2:00pm</div>
+        <textarea id="14" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">3:00pm</div>
+        <textarea id= "15" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">4:00pm</div>
+        <textarea id= "16" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">5:00pm</div>
+        <textarea id="17" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-2">6:00pm</div>
+        <textarea id= "18" class="col-8"></textarea> <button class="saveBtn col-2"></button>
+      </div>
+  
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
